--- a/index.htm
+++ b/index.htm
@@ -1,9 +1,30 @@
-<!doctype html>
-<html>
-  <head>
-    <title>_barzi_</title>
-  </head>
-  <body>
-    <p>ceva ceva</p>
-  </body>
-</html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Basic WebGL Example</title>
+</head>
+<body>
+    <!-- Create a canvas element -->
+    <canvas id="glCanvas" width="640" height="480"></canvas>
+
+    <script>
+        // Step 1: Get a WebGL context
+        const canvas = document.getElementById("glCanvas");
+        const gl = canvas.getContext("webgl");
+
+        // Check if WebGL is supported
+        if (!gl) {
+            alert("WebGL not supported by your browser.");
+        } else {
+            // Step 2: Set up the WebGL viewport
+            gl.viewport(0, 0, canvas.width, canvas.height);
+
+            // Step 3: Clear the canvas with a color
+            gl.clearColor(0.0, 0.0, 0.0, 1.0); // black background
+            gl.clear(gl.COLOR_BUFFER_BIT);
+        }
+    </script>
+</body>
+</html>
