--- a/index.htm
+++ b/index.htm
@@ -3,35 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Three.js Basic Example</title>
+    <title>Three.js OBJ Model</title>
 </head>
 <body>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/loaders/OBJLoader.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/loaders/MTLLoader.js"></script>
+    
     <script>
-        // Set up the scene, camera, and renderer
+
         const scene = new THREE.Scene();
         const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
         const renderer = new THREE.WebGLRenderer();
-        
         renderer.setSize(window.innerWidth, window.innerHeight);
         document.body.appendChild(renderer.domElement);
 
-        // Create a cube
-        const geometry = new THREE.BoxGeometry();
-        const material = new THREE.MeshBasicMaterial({ color: 0x00ff00 });
-        const cube = new THREE.Mesh(geometry, material);
-        scene.add(cube);
-
         camera.position.z = 5;
+
+   
+        const mtlLoader = new THREE.MTLLoader();
+        const objLoader = new THREE.OBJLoader();
+
+        mtlLoader.load('path/to/your/model.mtl', (materials) => {
+            materials.preload();
+            objLoader.setMaterials(materials);  // Apply materials to OBJLoader
+
+            objLoader.load(
+                'Resources/Models/suzanne.obj',        
+                (object) => {                    
+                    scene.add(object);         
+                },
+                undefined,                      
+                (error) => {                     
+                    console.error('Error loading model', error);
+                }
+            );
+        });
 
         // Animation loop
         function animate() {
             requestAnimationFrame(animate);
-            cube.rotation.x += 0.01;
-            cube.rotation.y += 0.01;
             renderer.render(scene, camera);
         }
-
         animate();
     </script>
 </body>
