--- a/index.htm
+++ b/index.htm
@@ -3,44 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Three.js OBJ Model</title>
+    <title>Three.js OBJ Model with Color</title>
 </head>
 <body>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/loaders/OBJLoader.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/loaders/MTLLoader.js"></script>
     
     <script>
-
+ 
         const scene = new THREE.Scene();
-        const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
+        const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 100);
         const renderer = new THREE.WebGLRenderer();
         renderer.setSize(window.innerWidth, window.innerHeight);
         document.body.appendChild(renderer.domElement);
 
         camera.position.z = 5;
 
-   
-        const mtlLoader = new THREE.MTLLoader();
         const objLoader = new THREE.OBJLoader();
 
-        mtlLoader.load('path/to/your/model.mtl', (materials) => {
-            materials.preload();
-            objLoader.setMaterials(materials);  // Apply materials to OBJLoader
+        objLoader.load(
+            'Resources/Models/suzanne.obj',  
+            (object) => {             
+ 
+                object.traverse((child) => {
+                    if (child.isMesh) {
+                        child.material = new THREE.MeshBasicMaterial({ color: 0xff0000 });
+                    }
+                });
 
-            objLoader.load(
-                'Resources/Models/suzanne.obj',        
-                (object) => {                    
-                    scene.add(object);         
-                },
-                undefined,                      
-                (error) => {                     
-                    console.error('Error loading model', error);
-                }
-            );
-        });
+                scene.add(object); 
+            },
+            undefined,                 
+            (error) => {              
+                console.error('Error loading model', error);
+            }
+        );
 
-        // Animation loop
+
         function animate() {
             requestAnimationFrame(animate);
             renderer.render(scene, camera);
