--- a/index.htm
+++ b/index.htm
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Three.js 3D Text Above Model</title>
+    <title>_barzi_</title>
     <style>
         body, html {
             margin: 0;
