--- a/index.htm
+++ b/index.htm
@@ -150,11 +150,11 @@
 
   <div class="container">
     <div class="rectangle" data-color="#983738" data-file="indexRed.html">CV</div>
-    <div class="rectangle" data-color="#bc6840" data-file="indexBlue.html">WORK</div>
-    <div class="rectangle" data-color="#ce954b" data-file="indexGreen.html">THESIS</div>
-    <div class="rectangle" data-color="#af7b85" data-file="indexYellow.html">BLOG</div>
+    <div class="rectangle" data-color="#bc6840" data-file="indexOrange.html">WORK</div>
+    <div class="rectangle" data-color="#ce954b" data-file="indexYellow.html">THESIS</div>
+    <div class="rectangle" data-color="#af7b85" data-file="indexPink.html">BLOG</div>
     <div class="rectangle" data-color="#554a86" data-file="indexPurple.html">GAME</div>
-    <div class="rectangle" data-color="#21201c" data-file="indexOrange.html">3D</div>
+    <div class="rectangle" data-color="#21201c" data-file="indexBlack.html">3D</div>
   </div>
 
   <div class="expansion"></div>
