--- a/indexBlack.html
+++ b/indexBlack.html
@@ -31,16 +31,27 @@
       text-transform: uppercase;
       margin-bottom: 10px;
     }
+
+    /* Styling for the link */
+    a {
+      color: #e6dfc3;
+      text-decoration: none;
+      font-weight: bold;
+      transition: color 0.3s ease;
+    }
+
+    a:hover {
+      color: #ff6347; /* Change color on hover */
+    }
   </style>
 </head>
 <body>
   <div class="content">
     <div class="text">
-      <h1>CV</h1>
-      <p>This section contains information related to the color red. It symbolizes energy, strength, and passion. Learn more below!</p>
-    </div>
-    <div class="image">
-      <img src="GAME_ICON.png" alt="Red Image">
+      <h1>3D Variant</h1>
+      <p>
+        <a href="index3D.html" target="_blank">PRESS HERE</a>
+      </p>
     </div>
   </div>
 </body>
