--- a/indexOrange.html
+++ b/indexOrange.html
@@ -36,7 +36,7 @@
 <body>
   <div class="content">
     <div class="text">
-      <h1>CV</h1>
+      <h1>PROJECTS</h1>
       <p>This section contains information related to the color red. It symbolizes energy, strength, and passion. Learn more below!</p>
     </div>
   </div>
