--- a/index.htm
+++ b/index.htm
@@ -143,9 +143,9 @@
   <div class="title">MOISEL RARES</div>
 
   <div class="buttons">
-    <a class="button" href="https://www.linkedin.com/in/moisel-rares/" target="_blank">L</a>
+    <a class="button" href="https://www.linkedin.com/in/moisel-rares/" target="_blank">Li</a>
     <a class="button" href="https://github.com/Barzoius" target="_blank">G</a>
-    <a class="button" href="https://example.com/link3" target="_blank">M</a>
+    <a class="button" href="https://example.com/link3" target="_blank">@</a>
   </div>
 
   <div class="container">
