--- a/indexRed.html
+++ b/indexRed.html
@@ -37,11 +37,12 @@
   <div class="content">
     <div class="text">
       <h1>CV</h1>
-      <p>This section contains information related to the color red. It symbolizes energy, strength, and passion. Learn more below!</p>
-    </div>
-    <div class="image">
-      <img src="GAME_ICON.png" alt="Red Image">
-    </div>
+      <object data="Moisel_Rares_CV.pdf" type="application/pdf" width="100%" height="500px">
+        <!-- Fallback content if the browser doesn't support PDF embedding -->
+        <p class="fallback-message">Your browser does not support embedded PDFs. You can download the PDF <a href="Moisel_Rares_CV.pdf" download>here</a>.</p>
+      </object>
   </div>
 </body>
 </html>
+
+
