--- a/indexRed.html
+++ b/indexRed.html
@@ -31,13 +31,21 @@
       text-transform: uppercase;
       margin-bottom: 10px;
     }
+
+    object {
+      width: 100%;  /* Make the PDF width span 100% of its container */
+      height: 800px; /* Increase the height for larger PDF display */
+      border: none;
+      border-radius: 10px;
+    }
+
   </style>
 </head>
 <body>
   <div class="content">
     <div class="text">
       <h1>CV</h1>
-      <object data="Moisel_Rares_CV.pdf" type="application/pdf" width="100%" height="500px">
+      <object data="Moisel_Rares_CV.pdf" type="application/pdf">
         <!-- Fallback content if the browser doesn't support PDF embedding -->
         <p class="fallback-message">Your browser does not support embedded PDFs. You can download the PDF <a href="Moisel_Rares_CV.pdf" download>here</a>.</p>
       </object>
