--- a/indexRed.html
+++ b/indexRed.html
@@ -7,29 +7,19 @@
   <style>
     .content {
       display: flex;
-      justify-content: space-between;
-      align-items: center;
+      flex-direction: column;
+      align-items: flex-start;  /* Align items to the left */
       gap: 20px;
       padding: 20px;
       color: #e6dfc3;
-    }
-
-    .text {
-      max-width: 500px;
-      font-size: 18px;
-      line-height: 1.6;
-    }
-
-    .image img {
-      max-width: 250px;
-      max-height: 250px;
-      border-radius: 10px;
     }
 
     h1 {
       font-size: 32px;
       text-transform: uppercase;
       margin-bottom: 10px;
+      text-align: left;  /* Ensure the text inside h1 aligns to the left */
+      width: 100%;  /* Ensures h1 spans the full width for proper alignment */
     }
 
     object {
@@ -39,18 +29,26 @@
       border-radius: 10px;
     }
 
+    .fallback-message {
+      font-size: 18px;
+      color: #ff6b6b;
+    }
+
+    .fallback-message{
+      max-width: 500px;
+      font-size: 18px;
+      line-height: 1.6;
+    }
   </style>
 </head>
 <body>
   <div class="content">
-    <div class="text">
-      <h1>CV</h1>
-      <object data="Moisel_Rares_CV.pdf" type="application/pdf">
-        <!-- Fallback content if the browser doesn't support PDF embedding -->
-        <p class="fallback-message">Your browser does not support embedded PDFs. You can download the PDF <a href="Moisel_Rares_CV.pdf" download>here</a>.</p>
-      </object>
+    <h1>CV</h1>
+    <!-- Embed PDF using object -->
+    <object data="Moisel_Rares_CV.pdf" type="application/pdf">
+      <!-- Fallback content if the browser doesn't support PDF embedding -->
+      <p class="fallback-message">Your browser does not support embedded PDFs. You can download the PDF <a href="Moisel_Rares_CV.pdf" download>here</a>.</p>
+    </object>
   </div>
 </body>
 </html>
-
-
