--- a/indexPurple.html
+++ b/indexPurple.html
@@ -31,13 +31,32 @@
       text-transform: uppercase;
       margin-bottom: 10px;
     }
+
+    a {
+      color: #e6dfc3;
+      text-decoration: none;
+      font-weight: bold;
+      transition: color 0.3s ease;
+    }
+
+    a:hover {
+      color: #21201d; /* Change color on hover */
+    }
   </style>
 </head>
 <body>
   <div class="content">
     <div class="text">
-      <h1>GAME</h1>
-      <p>This section contains information related to the color red. It symbolizes energy, strength, and passion. Learn more below!</p>
+      <h1>GAMES</h1>
+      <br>
+      <h3>THROWAWAYS</h3>
+      <p>A dungeon crawler, made in Unity, featuring procedurally generated levels, strategic
+        combat, and puzzle-solving elements. Players navigate through various challenges and
+        enemies while collecting items and upgrading.</p>
+      <br>
+      <p>The game will be finished by the end of January 2025 and posted on itch.io.</p>
+      <br>
+      <p>The GitHub repo can be checked <a href="https://github.com/Barzoius/Throwaways" target="_blank">here</a></p>
     </div>
   </div>
 </body>
