--- a/indexRed.html
+++ b/indexRed.html
@@ -7,7 +7,7 @@
   <style>
     .content {
       display: flex;
-      justify-content: space-between;
+      justify-content: flex-start; /* Align content to the left */
       align-items: center;
       gap: 20px;
       padding: 20px;
@@ -15,16 +15,12 @@
     }
 
     .text {
-      max-width: 500px;
+
       font-size: 18px;
       line-height: 1.6;
+      text-align: left; /* Ensure text is aligned to the left */
     }
 
-    .image img {
-      max-width: 250px;
-      max-height: 250px;
-      border-radius: 10px;
-    }
 
     h1 {
       font-size: 32px;
@@ -51,7 +47,6 @@
       <p>Open it in browser,  <a href="Moisel_Rares_CV.pdf" target="_blank">here</a>,
         or download it,  <a href="Moisel_Rares_CV.pdf" download>here</a>.</p>
     </div>
-
   </div>
 </body>
 </html>
