--- a/indexOrange.html
+++ b/indexOrange.html
@@ -37,7 +37,32 @@
   <div class="content">
     <div class="text">
       <h1>PROJECTS</h1>
-      <p>This section contains information related to the color red. It symbolizes energy, strength, and passion. Learn more below!</p>
+      <br>
+      <h3>DirectX11 Graphical Engine -GraphicalSandBox- </h3>
+      <p>A graphical engine developed using DirectX 11, focused on good architecture for enhanced dynamic control, designed to render 3D graphics. Written in C++.
+      </p>
+
+      <h3>OpenGL4.4 Graphical Engine -ToyGFX- </h3>
+      <p>A graphical engine developed using OpenGL 4.4, primarily focused on experimenting
+        with and testing various techniques for rendering 2D and 3D graphics. Written in C++.</p>
+
+
+      <h3>Other smaller projects</h3>
+      <br>
+      <h4>Bezier Paths</h4>
+      <p>This project uses Bezier curves o arbitrary order to generate a smooth and controlled path that an object can follow. The goal is to allow the object to move along this path with natural and precise motion, using the properties of Bezier curves to define 
+        the direction and shape of the trajectory at each point.</p>
+
+      <h4>RayMarcher</h4>
+      <p></p>
+
+      
+      <h4>Terrain Generator</h4>
+      <p></p>
+
+      <h4>Shell Texturing</h4>
+      <p></p>
+
     </div>
   </div>
 </body>
