--- a/indexPink.html
+++ b/indexPink.html
@@ -37,7 +37,8 @@
   <div class="content">
     <div class="text">
       <h1>BLOG</h1>
-      <p>This section contains information related to the color red. It symbolizes energy, strength, and passion. Learn more below!</p>
+      <br>
+      <p>SOON ...</p>
     </div>
   </div>
 </body>
