--- a/indexOrange.html
+++ b/indexOrange.html
@@ -7,7 +7,7 @@
   <style>
     .content {
       display: flex;
-      justify-content: space-between;
+      justify-content: flex-start;
       align-items: center;
       gap: 20px;
       padding: 20px;
@@ -18,6 +18,7 @@
 
       font-size: 18px;
       line-height: 1.6;
+      text-align: left;
     }
 
     .image img {
