--- a/indexPurple.html
+++ b/indexPurple.html
@@ -7,7 +7,7 @@
   <style>
     .content {
       display: flex;
-      justify-content: space-between;
+      justify-content: flex-start;
       align-items: center;
       gap: 20px;
       padding: 20px;
@@ -17,6 +17,7 @@
     .text {
       font-size: 18px;
       line-height: 1.6;
+      text-align: left;
     }
 
 
