--- a/indexOrange.html
+++ b/indexOrange.html
@@ -7,30 +7,29 @@
   <style>
     .content {
       display: flex;
-      justify-content: flex-start;
-      align-items: center;
+      justify-content: flex-start; /* Align content to the left */
+      align-items: flex-start; /* Align content to the top */
       gap: 20px;
       padding: 20px;
       color: #e6dfc3;
     }
 
     .text {
-
       font-size: 18px;
       line-height: 1.6;
-      text-align: left;
-    }
-
-    .image img {
-      max-width: 250px;
-      max-height: 250px;
-      border-radius: 10px;
+      text-align: left; /* Ensure text is aligned to the left */
+      max-width: 800px; /* Restrict width like in Red Section */
+      margin-right: 20px; /* Add margin for spacing */
     }
 
     h1 {
       font-size: 32px;
       text-transform: uppercase;
       margin-bottom: 10px;
+    }
+
+    h3, h4 {
+      margin-top: 10px; /* Add space between headers */
     }
   </style>
 </head>
@@ -40,24 +39,19 @@
       <h1>PROJECTS</h1>
       <br>
       <h3>DirectX11 Graphical Engine -GraphicalSandBox- </h3>
-      <p>A graphical engine developed using DirectX 11, focused on good architecture for enhanced dynamic control, designed to render 3D graphics. Written in C++.
-      </p>
+      <p>A graphical engine developed using DirectX 11, focused on good architecture for enhanced dynamic control, designed to render 3D graphics. Written in C++.</p>
 
       <h3>OpenGL4.4 Graphical Engine -ToyGFX- </h3>
-      <p>A graphical engine developed using OpenGL 4.4, primarily focused on experimenting
-        with and testing various techniques for rendering 2D and 3D graphics. Written in C++.</p>
-
+      <p>A graphical engine developed using OpenGL 4.4, primarily focused on experimenting with and testing various techniques for rendering 2D and 3D graphics. Written in C++.</p>
 
       <h3>Other smaller projects</h3>
       <br>
       <h4>Bezier Paths</h4>
-      <p>This project uses Bezier curves o arbitrary order to generate a smooth and controlled path that an object can follow. The goal is to allow the object to move along this path with natural and precise motion, using the properties of Bezier curves to define 
-        the direction and shape of the trajectory at each point.</p>
+      <p>This project uses Bezier curves of arbitrary order to generate a smooth and controlled path that an object can follow. The goal is to allow the object to move along this path with natural and precise motion, using the properties of Bezier curves to define the direction and shape of the trajectory at each point.</p>
 
       <h4>RayMarcher</h4>
       <p></p>
 
-      
       <h4>Terrain Generator</h4>
       <p></p>
 
