--- a/indexOrange.html
+++ b/indexOrange.html
@@ -31,6 +31,19 @@
     h3, h4 {
       margin-top: 10px; /* Add space between headers */
     }
+
+
+    a {
+      color: #e6dfc3;
+      text-decoration: none;
+      font-weight: bold;
+      transition: color 0.3s ease;
+    }
+
+    a:hover {
+      color: #21201d; /* Change color on hover */
+    }
+
   </style>
 </head>
 <body>
@@ -40,17 +53,21 @@
       <br>
       <h3>DirectX11 Graphical Engine -GraphicalSandBox- </h3>
       <p>A graphical engine developed using DirectX 11, focused on good architecture for enhanced dynamic control, designed to render 3D graphics. Written in C++.</p>
+      <p> Can be checked <a href="https://github.com/Barzoius/GraphicsSandBox" target="_blank">here</a> </p>
 
       <h3>OpenGL4.4 Graphical Engine -ToyGFX- </h3>
       <p>A graphical engine developed using OpenGL 4.4, primarily focused on experimenting with and testing various techniques for rendering 2D and 3D graphics. Written in C++.</p>
-
+      <p> Can be checked <a href="https://github.com/Barzoius/ToyGFX" target="_blank">here</a> </p>
+      
       <h3>Other smaller projects</h3>
       <br>
       <h4>Bezier Paths</h4>
       <p>This project uses Bezier curves of arbitrary order to generate a smooth and controlled path that an object can follow. The goal is to allow the object to move along this path with natural and precise motion, using the properties of Bezier curves to define the direction and shape of the trajectory at each point.</p>
+      <p> Can be checked <a href="https://github.com/Barzoius/BezierCurves" target="_blank">here</a> </p>
 
       <h4>RayMarcher</h4>
-      <p></p>
+      <p>This project showcases a sphere-assisted raymarcher capable of rendering Constructive Solid Geometry (CSG) shapes using Signed Distance Functions (SDFs) with boolean operations.</p>
+      <p> Can be checked <a href="https://github.com/Barzoius/RayMarcher" target="_blank">here</a> </p>
 
       <h4>Terrain Generator</h4>
       <p></p>
