--- a/indexBlack.html
+++ b/indexBlack.html
@@ -50,7 +50,7 @@
     <div class="text">
       <h1>3D Variant</h1>
       <p>
-        <a href="index3D.html" target="_blank">PRESS HERE</a>
+        <a href="barzi_blog/Lighting&Shading/light2.html" target="_blank">PRESS HERE</a>
       </p>
     </div>
   </div>
