--- a/index3D.html
+++ b/index3D.html
@@ -21,7 +21,6 @@
     <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/loaders/OBJLoader.js"></script>
     
     <script>
-
         const scene = new THREE.Scene();
         const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 100);
         const renderer = new THREE.WebGLRenderer();
@@ -29,21 +28,39 @@
         document.body.appendChild(renderer.domElement);
 
         camera.position.z = 5;
+        camera.position.y = 1;
+
 
         const objLoader = new THREE.OBJLoader();
+        const textureLoader = new THREE.TextureLoader();
+
         let loadedObject = null;
 
+        // Load normal map texture
+        const normalMap = textureLoader.load('Resources/Textures/material0_normal.jpg', () => {
+            console.log('Normal map loaded');
+        });
+
         objLoader.load(
-            'Resources/Models/monitor.obj', 
+            'Resources/Models/rapid.obj', 
             (object) => {             
                 object.traverse((child) => {
                     if (child.isMesh) {
-                        child.material = new THREE.MeshBasicMaterial({ color: 0x808080 });
+                        child.material = new THREE.MeshStandardMaterial({
+                            color: 0x808080,    // Base color
+                            normalMap: normalMap, // Apply the normal map
+                            metalness: 0.5,    // Adjust metalness for effect
+                            roughness: 0.5     // Adjust roughness for effect
+                        });
                     }
                 });
 
                 loadedObject = object;  
-                loadedObject.scale.set(2, 2, 2);
+                loadedObject.scale.set(0.02, 0.02, 0.02);
+                loadedObject.rotation.x += 5;  
+                loadedObject.rotation.y += 0;
+                loadedObject.rotation.z += 1;  
+
                 scene.add(object);  
             },
             undefined, 
@@ -51,6 +68,13 @@
                 console.error('Error loading model', error);
             }
         );
+
+        const light = new THREE.DirectionalLight(0xffffff, 1);
+        const light2 = new THREE.PointLight( 0xffffff, 1, 100 );
+        light2.position.set(5, 10, 7.5);
+        light.position.set(5, 10, 7.5);
+
+        scene.add(light2);
 
         window.addEventListener('resize', () => {
             renderer.setSize(window.innerWidth, window.innerHeight);
@@ -62,7 +86,7 @@
             requestAnimationFrame(animate);
 
             if (loadedObject) {
-                loadedObject.rotation.y += 0.01;  
+                //loadedObject.rotation.y += 0.01;  // Rotate the object slightly
             }
 
             renderer.render(scene, camera);
