--- a/barzi_blog/Lighting&Shading/light2.html
+++ b/barzi_blog/Lighting&Shading/light2.html
@@ -7,6 +7,23 @@
     <link rel="stylesheet" href="light2.css">
 </head>
 <body>
+    <div id="controls">
+        <label for="lightPosX">Light X:</label>
+        <input type="range" id="lightPosX" min="-50" max="50" step="0.1" value="12">
+        <span id="lightPosXValue">12</span><br>
+
+        <label for="lightPosY">Light Y:</label>
+        <input type="range" id="lightPosY" min="-50" max="50" step="0.1" value="20">
+        <span id="lightPosYValue">20</span><br>
+
+        <label for="lightPosZ">Light Z:</label>
+        <input type="range" id="lightPosZ" min="-50" max="50" step="0.1" value="17.5">
+        <span id="lightPosZValue">17.5</span><br>
+    </div>
+
+    <br/>
+
+
     <canvas id="customCanvas"></canvas>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/loaders/OBJLoader.js"></script>
