--- a/indexOrange.html
+++ b/indexOrange.html
@@ -11,7 +11,7 @@
       align-items: flex-start; /* Align content to the top */
       gap: 20px;
       padding: 20px;
-      color: #e6dfc3;
+      color: #21201d;
     }
 
     .text {
@@ -19,7 +19,10 @@
       line-height: 1.6;
       text-align: left; /* Ensure text is aligned to the left */
       max-width: 800px; /* Restrict width like in Red Section */
+    
       margin-right: 20px; /* Add margin for spacing */
+    
+      color: #21201d;
     }
 
     h1 {
@@ -32,16 +35,19 @@
       margin-top: 10px; /* Add space between headers */
     }
 
+    p {
+      color: #21201d !important;
+    }
 
     a {
-      color: #e6dfc3;
+      color: #21201d;
       text-decoration: none;
       font-weight: bold;
       transition: color 0.3s ease;
     }
 
     a:hover {
-      color: #21201d; /* Change color on hover */
+      color: #e6dfc3; /* Change color on hover */
     }
 
   </style>
@@ -52,7 +58,7 @@
       <h1>PROJECTS</h1>
       <br>
       <h3>DirectX11 Graphical Engine -GraphicalSandBox- </h3>
-      <p>A graphical engine developed using DirectX 11, focused on good architecture for enhanced dynamic control, designed to render 3D graphics. Written in C++.</p>
+      <p >A graphical engine developed using DirectX 11, focused on good architecture for enhanced dynamic control, designed to render 3D graphics. Written in C++.</p>
       <p> Can be checked <a href="https://github.com/Barzoius/GraphicsSandBox" target="_blank">here</a> </p>
 
       <h3>OpenGL4.4 Graphical Engine -ToyGFX- </h3>
