--- a/indexRed.html
+++ b/indexRed.html
@@ -44,8 +44,8 @@
   <div class="content">
     <div class="text">
       <h1>CV</h1>
-      <p>Open it in browser,  <a href="Moisel_Rares_CV.pdf" target="_blank">here</a>,
-        or download it,  <a href="Moisel_Rares_CV.pdf" download>here</a>.</p>
+      <p>Open it in browser,  <a href="MR_CV.pdf" target="_blank">here</a>,
+        or download it,  <a href="MR_CV.pdf" download>here</a>.</p>
     </div>
   </div>
 </body>
