--- a/indexOrange.html
+++ b/indexOrange.html
@@ -76,7 +76,13 @@
       <p> Can be checked <a href="https://github.com/Barzoius/RayMarcher" target="_blank">here</a> </p>
 
       <h4>Terrain Generator</h4>
-      <p></p>
+      <p>This project focuses on creating procedural 
+        terrain generation using multiple height map techniques. 
+        The goal is to produce diverse and realistic landscapes 
+        by combining different methods 
+        to simulate natural terrain features</p>
+
+        <p> Can be checked <a href="https://github.com/Barzoius/TERRAIN_GENERATION" target="_blank">here</a> </p>
 
       <h4>Shell Texturing</h4>
       <p></p>
