--- a/index.htm
+++ b/index.htm
@@ -145,7 +145,7 @@
   <div class="buttons">
     <a class="button" href="https://www.linkedin.com/in/moisel-rares/" target="_blank">Li</a>
     <a class="button" href="https://github.com/Barzoius" target="_blank">G</a>
-    <a class="button" href="https://example.com/link3" target="_blank">@</a>
+    <a class="button" href="mecca.rares@gmail.com" target="_blank">@</a>
   </div>
 
   <div class="container">
