--- a/indexBlack.html
+++ b/indexBlack.html
@@ -49,7 +49,8 @@
   <div class="content">
     <div class="text">
       <h1>3D Variant</h1>
-      <p>
+      <p>Nothing for now ...</p>
+      <p> 
         <a href="barzi_blog/Lighting&Shading/light2.html" target="_blank">PRESS HERE</a>
       </p>
     </div>
