--- a/indexPurple.html
+++ b/indexPurple.html
@@ -50,9 +50,26 @@
         combat, and puzzle-solving elements. Players navigate through various challenges and
         enemies while collecting items and upgrading.</p>
       <br>
-      <p>The game will be finished by the end of January 2025 and posted on itch.io.</p>
+      <p>The game can be played in browser <a href="https://barzoius.itch.io/throwaways" target="_blank">here</a> </p>
       <br>
       <p>The GitHub repo can be checked <a href="https://github.com/Barzoius/Throwaways" target="_blank">here</a></p>
+      <br>
+
+      <h3>Lost Station</h3>
+      <p>A short horror game made in Unreal 5</p>
+      <br>
+      <p>The GitHub repo can be checked <a href="https://github.com/Barzoius/LostStation" target="_blank">here</a></p>
+      <br>
+    
+
+      <h3>Power for the Jarred Brain</h3>
+      <p>A RPG platformer made in Unity for the Big Mode 2025 Gmae Jam</p>
+      <br>
+      <p>The game can be played in browser <a href="https://barzoius.itch.io/power-for-jarred-brain" target="_blank">here</a> </p>
+      <br>
+      <p>The GitHub repo can be checked <a href="https://github.com/Barzoius/Power-For-Jarred-Brain" target="_blank">here</a></p>
+      <br>
+    
     </div>
   </div>
 </body>
