--- a/indexPurple.html
+++ b/indexPurple.html
@@ -63,7 +63,7 @@
     
 
       <h3>Power for the Jarred Brain</h3>
-      <p>A RPG platformer made in Unity for the Big Mode 2025 Gmae Jam</p>
+      <p>A RPG platformer made in Unity for the Big Mode 2025 Game Jam</p>
       <br>
       <p>The game can be played in browser <a href="https://barzoius.itch.io/power-for-jarred-brain" target="_blank">here</a> </p>
       <br>
